--- a/dad-jokes-app/public/index.html
+++ b/dad-jokes-app/public/index.html
@@ -23,6 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,700" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
   <title>Dad Jokes App</title>
 </head>
 
